crates/tele_tokenizer/tests/snapshots/basics__hash_token.snap
---
source: crates/tele_tokenizer/tests/basics.rs
assertion_line: 81
expression: tokenizer.tokenize()

---
Ok(
    [
        Token {
            token_type: Hash,
            start_pos: Pos {
                offset: 1,
                line: 1,
                column: 2,
            },
            end_pos: Pos {
                offset: 4,
                line: 1,
                column: 5,
            },
            content: "foo",
        },
        Token {
            token_type: WhiteSpace,
            start_pos: Pos {
                offset: 4,
                line: 1,
                column: 5,
            },
            end_pos: Pos {
                offset: 5,
                line: 1,
                column: 6,
            },
            content: " ",
        },
        Token {
            token_type: LeftCurlyBracket,
            start_pos: Pos {
                offset: 5,
                line: 1,
                column: 6,
            },
            end_pos: Pos {
                offset: 6,
                line: 1,
                column: 7,
            },
            content: "{",
        },
        Token {
            token_type: RightCurlyBracket,
            start_pos: Pos {
                offset: 6,
                line: 1,
                column: 7,
            },
            end_pos: Pos {
                offset: 7,
                line: 1,
                column: 8,
            },
            content: "}",
        },
        Token {
            token_type: EOF,
            start_pos: Pos {
                offset: 7,
                line: 1,
                column: 8,
            },
            end_pos: Pos {
                offset: 7,
                line: 1,
                column: 8,
            },
            content: "",
        },
    ],
)
