crates/tele_tokenizer/tests/snapshots/basics__less_than_sign_as_cdo.snap
---
source: crates/tele_tokenizer/tests/basics.rs
assertion_line: 123
expression: tokenizer.tokenize()

---
Ok(
    [
        Token {
            token_type: CDO,
            start_pos: Pos {
                offset: 0,
                line: 1,
                column: 1,
            },
            end_pos: Pos {
                offset: 4,
                line: 1,
                column: 5,
            },
            content: "<!--",
        },
        Token {
            token_type: EOF,
            start_pos: Pos {
                offset: 4,
                line: 1,
                column: 5,
            },
            end_pos: Pos {
                offset: 4,
                line: 1,
                column: 5,
            },
            content: "",
        },
    ],
)
