crates/tele_tokenizer/tests/snapshots/basics__string_case.snap
---
source: crates/tele_tokenizer/tests/basics.rs
assertion_line: 69
expression: tokenizer.tokenize()

---
Ok(
    [
        Token {
            token_type: Ident,
            start_pos: Pos {
                offset: 0,
                line: 1,
                column: 1,
            },
            end_pos: Pos {
                offset: 5,
                line: 1,
                column: 6,
            },
            content: "color",
        },
        Token {
            token_type: Colon,
            start_pos: Pos {
                offset: 5,
                line: 1,
                column: 6,
            },
            end_pos: Pos {
                offset: 6,
                line: 1,
                column: 7,
            },
            content: ":",
        },
        Token {
            token_type: WhiteSpace,
            start_pos: Pos {
                offset: 6,
                line: 1,
                column: 7,
            },
            end_pos: Pos {
                offset: 7,
                line: 1,
                column: 8,
            },
            content: " ",
        },
        Token {
            token_type: String,
            start_pos: Pos {
                offset: 8,
                line: 1,
                column: 9,
            },
            end_pos: Pos {
                offset: 10,
                line: 1,
                column: 11,
            },
            content: "\\'",
        },
        Token {
            token_type: EOF,
            start_pos: Pos {
                offset: 11,
                line: 1,
                column: 12,
            },
            end_pos: Pos {
                offset: 11,
                line: 1,
                column: 12,
            },
            content: "",
        },
    ],
)
