crates/tele_tokenizer/tests/snapshots/basics__url_token.snap
---
source: crates/tele_tokenizer/tests/basics.rs
assertion_line: 54
expression: tokenizer.tokenize()

---
Ok(
    [
        Token {
            token_type: URL,
            start_pos: Pos {
                offset: 4,
                line: 1,
                column: 5,
            },
            end_pos: Pos {
                offset: 14,
                line: 1,
                column: 15,
            },
            content: "   foo.svg",
        },
        Token {
            token_type: SemiColon,
            start_pos: Pos {
                offset: 17,
                line: 1,
                column: 18,
            },
            end_pos: Pos {
                offset: 18,
                line: 1,
                column: 19,
            },
            content: ";",
        },
        Token {
            token_type: EOF,
            start_pos: Pos {
                offset: 18,
                line: 1,
                column: 19,
            },
            end_pos: Pos {
                offset: 18,
                line: 1,
                column: 19,
            },
            content: "",
        },
    ],
)
